# legacy-GDMP-Shared

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  conanfile.txt
include/: enum.hpp  packet.hpp  packetUtility.hpp  struct.hpp  util.hpp
src/: main.cpp  packet.cpp  packet.proto  packetUtility.cpp  struct.cpp  util.cpp
